Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-40479

Debugger link not working because the Chrome Dev Tools changed the URL format to "devtools://"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.0.0
    • Cheshire-Cat
    • eventing
    • None
    • Untriaged
    • 1
    • Unknown

    Description

      The link generated to use the JS debugger is not working because the link to access the debugger in Google Chrome has been changed. 

      Chrome Version: 83.0.4103.116 (Official Build) (64-bit)

       
       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vinayaka.kamath Vinayaka Kamath (Inactive)
              vinayaka.kamath Vinayaka Kamath (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty