MB-40479: Updated the devtools link for the debugger

Change-Id: I52dfce45c6058df68ece471b17764045d3275572
Reviewed-on: http://review.couchbase.org/c/eventing/+/132540
Reviewed-by: Sriram Melkote <siri@couchbase.com>
Reviewed-by: CI Bot
Tested-by: Vinayaka Kamath <vinayaka.kamath@couchbase.com>